[fix]:resolved all NullPointException cases